--- a/notebooks/1)_Diabète_diff.ipynb
+++ b/notebooks/1)_Diabète_diff.ipynb
@@ -22,10 +22,7 @@
     " \n",
     " **les symptome du diabète de type 2 :** Les symptômes du diabète de type 2 sont discrets et il est le plus souvent diagnostiqué à l’occasion d’une prise de sang. Les symptômes des complications du diabète de type 2 sont une difficulté à cicatriser, une perte de sensibilité au niveau des pieds, des troubles de la vision, une insuffisance rénale, un infarctus ou un AVC.\n",
     "\n",
-    " **Traitement:** changement d'alimentation,activité physique ,médicament ou parfois insuline. \n",
-    "\n",
-    "**source**: \n",
-    "https://www.vidal.fr/maladies/metabolisme-diabete/diabete-type-2.html\n"
+    " **Traitement:** changement d'alimentation,activité physique ,médicament ou parfois insuline. \n"
    ]
   },
   {
@@ -160,16 +157,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
+   "id": "9634dbdf-e8b0-42bf-a4be-34ac64b258c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(768, 9)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "e63a653d-ab35-44fe-8552-d46e9b45c479",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pregnancies'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste_donnees=df.iloc[0,:]\n",
+    "liste_donnees.index[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd298db3-a096-4a45-94b2-11b0a961431c",
+   "metadata": {},
+   "source": [
+    "**source**: \n",
+    "\n",
+    "https://www.vidal.fr/maladies/metabolisme-diabete/diabete-type-2.html\n",
+    "\n",
+    "https://www.kaggle.com/datasets/uciml/pima-indians-diabetes-database"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e8b29ad-9913-4614-bf2e-1f42925a953a",
+   "id": "36965c36-35e9-4337-8777-c4ec6e380536",
    "metadata": {},
    "outputs": [],
    "source": []
