--- a/notebooks/1)_Diabète_diff.ipynb
+++ b/notebooks/1)_Diabète_diff.ipynb
@@ -22,7 +22,24 @@
     " \n",
     " **les symptome du diabète de type 2 :** Les symptômes du diabète de type 2 sont discrets et il est le plus souvent diagnostiqué à l’occasion d’une prise de sang. Les symptômes des complications du diabète de type 2 sont une difficulté à cicatriser, une perte de sensibilité au niveau des pieds, des troubles de la vision, une insuffisance rénale, un infarctus ou un AVC.\n",
     "\n",
-    " **Traitement:** changement d'alimentation,activité physique ,médicament ou parfois insuline. \n"
+    " **Traitement:** changement d'alimentation,activité physique ,médicament ou parfois insuline. \n",
+    "\n",
+    " #### Variable \n",
+    "\n",
+    " **Pregnancies:** (grosses) cest le nombre de grosses a eu le patien \n",
+    "\n",
+    " **Glucose:** est une molécule issu des aliments que nous consommons et qui est nécessaire au bon fonctionnement de notre organisme\n",
+    "\n",
+    " **BloodPressure:** Pression artérielle hypertension artérielle quand la pression du sang dans les artères est trop élevée\n",
+    " \n",
+    " **SkinThickness:** L’épaisseur du pli cutané tricipital (en millimètres) mesurée à l’aide d’un pince à plis cutanés.\n",
+    " \n",
+    " **Insulin:** hormone produite par le pancréas qui régule le taux de glucose (sucre) dans le sang\n",
+    " \n",
+    "  **BMI:** une grandeur qui permet d'estimer la corpulence d'une personne\n",
+    "\n",
+    "   **DiabetesPedigreeFunctionune:** mesure du risque génétique de diabète en fonction des antécédents familiaux.\n",
+    "  \n"
    ]
   },
   {
@@ -197,6 +214,14 @@
     "liste_donnees=df.iloc[0,:]\n",
     "liste_donnees.index[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7699029-8c65-4a6b-81b7-9fca061601b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
