--- a/notebooks/2)Exploration de données.ipynb
+++ b/notebooks/2)Exploration de données.ipynb
@@ -151,14 +151,35 @@
    "id": "f5df65cd-b49a-46e8-a4cd-61dadb8ce9e4",
    "metadata": {},
    "source": [
-    " **variable target*** : Outcome\n",
+    " **variable target** : Outcome\n",
+    " \n",
     "**lignes et colonnes** : 768, 9\n",
+    "\n",
     "**types de variables** : qualitatives : 22, quantitatives : 78"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74ba74db-7f68-4c45-84c8-4a0723622f92",
+   "metadata": {},
+   "source": [
+    "### Analyse des valeurs manquantes :\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "id": "b6f3753a-d575-48cc-a977-ff8e4e0d5b63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " beaucoup de NaN (moitié des variables > 90% de NaN)\n",
+    "2 groupes de données 76% -> Test viral, 89% -> taux sanguins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "c6ddc3be-62d3-4cac-b2d2-bf8e0b1579b7",
    "metadata": {},
    "outputs": [],
@@ -171,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "bdcaecdc-98c8-4a53-8b94-0fcc75a07c98",
    "metadata": {},
    "outputs": [
@@ -295,7 +316,7 @@
        "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "fccd4ef2-0600-442e-ac38-5b2dcffd7a74",
    "metadata": {},
    "outputs": [
@@ -544,8 +565,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "599c05bd-157d-45b1-b94e-61ccbcde6bfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m20\u001b[39m,\u001b[38;5;241m10\u001b[39m))\n\u001b[1;32m----> 2\u001b[0m sns\u001b[38;5;241m.\u001b[39mheatmap(data\u001b[38;5;241m.\u001b[39misna(),cbar\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 2000x1000 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.figure(figsize=(20,10))\n",
+    "sns.heatmap(data.isna(),cbar=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff26d3ba-3c67-4f96-b5ad-3c3a890012a0",
    "metadata": {},
    "outputs": [],
    "source": []
