--- a/notebooks/2)Exploration de données.ipynb
+++ b/notebooks/2)Exploration de données.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "markdown",
    "id": "ec3caaf2-a446-42f7-9aa6-02cced586540",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Analyse de Forme :"
    ]
@@ -69,9 +71,11 @@
   {
    "cell_type": "markdown",
    "id": "00d1fe21-e317-433b-9e34-c78d98b02f13",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# Analyse de Forme :"
+    "## Analyse de Forme :"
    ]
   },
   {
@@ -525,9 +529,11 @@
   {
    "cell_type": "markdown",
    "id": "5f85ba4d-094a-40ef-b0ee-f95def245af9",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# Analayse de fond : "
+    "## Analayse de fond : "
    ]
   },
   {
@@ -720,7 +726,7 @@
    "id": "d4f79a9d-7c61-4780-b42a-c8bd710fb45a",
    "metadata": {},
    "source": [
-    "## Relation Target / Variables"
+    "### Relation Target / Variables"
    ]
   },
   {
