--- a/notebooks/3) PRE-PROCESSING.ipynb
+++ b/notebooks/3) PRE-PROCESSING.ipynb
@@ -387,205 +387,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "id": "06d87939-ebe3-4f7d-b433-3be9f97c0ab9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pregnancies</th>\n",
-       "      <th>Glucose</th>\n",
-       "      <th>SkinThickness</th>\n",
-       "      <th>Insulin</th>\n",
-       "      <th>BMI</th>\n",
-       "      <th>DiabetesPedigreeFunction</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Outcome</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6</td>\n",
-       "      <td>148</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>33.6</td>\n",
-       "      <td>0.627</td>\n",
-       "      <td>50</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>85</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26.6</td>\n",
-       "      <td>0.351</td>\n",
-       "      <td>31</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8</td>\n",
-       "      <td>183</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>23.3</td>\n",
-       "      <td>0.672</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>116</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25.6</td>\n",
-       "      <td>0.201</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>10</td>\n",
-       "      <td>115</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35.3</td>\n",
-       "      <td>0.134</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>761</th>\n",
-       "      <td>9</td>\n",
-       "      <td>170</td>\n",
-       "      <td>31</td>\n",
-       "      <td>0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>0.403</td>\n",
-       "      <td>43</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>762</th>\n",
-       "      <td>9</td>\n",
-       "      <td>89</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>22.5</td>\n",
-       "      <td>0.142</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>764</th>\n",
-       "      <td>2</td>\n",
-       "      <td>122</td>\n",
-       "      <td>27</td>\n",
-       "      <td>0</td>\n",
-       "      <td>36.8</td>\n",
-       "      <td>0.340</td>\n",
-       "      <td>27</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>766</th>\n",
-       "      <td>1</td>\n",
-       "      <td>126</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30.1</td>\n",
-       "      <td>0.349</td>\n",
-       "      <td>47</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>767</th>\n",
-       "      <td>1</td>\n",
-       "      <td>93</td>\n",
-       "      <td>31</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30.4</td>\n",
-       "      <td>0.315</td>\n",
-       "      <td>23</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>376 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Pregnancies  Glucose  SkinThickness  Insulin   BMI  \\\n",
-       "0              6      148             35        0  33.6   \n",
-       "1              1       85             29        0  26.6   \n",
-       "2              8      183              0        0  23.3   \n",
-       "5              5      116              0        0  25.6   \n",
-       "7             10      115              0        0  35.3   \n",
-       "..           ...      ...            ...      ...   ...   \n",
-       "761            9      170             31        0  44.0   \n",
-       "762            9       89              0        0  22.5   \n",
-       "764            2      122             27        0  36.8   \n",
-       "766            1      126              0        0  30.1   \n",
-       "767            1       93             31        0  30.4   \n",
-       "\n",
-       "     DiabetesPedigreeFunction  Age  Outcome  \n",
-       "0                       0.627   50        1  \n",
-       "1                       0.351   31        0  \n",
-       "2                       0.672   32        1  \n",
-       "5                       0.201   30        0  \n",
-       "7                       0.134   29        0  \n",
-       "..                        ...  ...      ...  \n",
-       "761                     0.403   43        1  \n",
-       "762                     0.142   33        0  \n",
-       "764                     0.340   27        0  \n",
-       "766                     0.349   47        1  \n",
-       "767                     0.315   23        0  \n",
-       "\n",
-       "[376 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df[df[['Glucose', 'SkinThickness', 'Insulin', 'BMI']].eq(0).any(axis=1)]"
+    "df[['Glucose', 'SkinThickness', 'Insulin', 'BMI']]=df[['Glucose', 'SkinThickness', 'Insulin', 'BMI']].replace(0,np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "846f4871-450a-4250-828d-c396a95e90a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.fillna(df.median(), inplace=True)\n"
    ]
   },
   {
