--- a/notebooks/3) PRE-PROCESSING.ipynb
+++ b/notebooks/3) PRE-PROCESSING.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "0fbd22be-030f-4288-8ce9-dd921c9779ce",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "376d7a88-d54f-4d8c-a3e2-d40a1b9ed25e",
    "metadata": {},
    "outputs": [
@@ -132,7 +133,7 @@
        "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "d285bbca-bfca-4345-aac3-d3a99582e5b7",
    "metadata": {},
    "outputs": [
@@ -162,7 +163,7 @@
        "(768, 9)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "371fb2a0-3b1c-48eb-a95a-2748fcecdac6",
    "metadata": {},
    "outputs": [],
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "28c9da1f-7d60-49d4-8628-0744b907e51d",
    "metadata": {},
    "outputs": [
@@ -376,7 +377,7 @@
        "[768 rows x 8 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "06d87939-ebe3-4f7d-b433-3be9f97c0ab9",
    "metadata": {},
    "outputs": [],
@@ -397,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "846f4871-450a-4250-828d-c396a95e90a1",
    "metadata": {},
    "outputs": [],
@@ -407,8 +408,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "eed999b9-f716-419c-8402-27943c2b0525",
+   "execution_count": 23,
+   "id": "13bf9983-80c1-4abf-9eb9-3a9c12683e80",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'MinMaxScaler' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m numerical_cols \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mcolumns[df\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOutcome\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m scaler \u001b[38;5;241m=\u001b[39m MinMaxScaler()\n\u001b[0;32m      4\u001b[0m df[numerical_cols] \u001b[38;5;241m=\u001b[39m scaler\u001b[38;5;241m.\u001b[39mfit_transform(df[numerical_cols])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'MinMaxScaler' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "numerical_cols = df.columns[df.columns != 'Outcome']\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "df[numerical_cols] = scaler.fit_transform(df[numerical_cols])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "200462ed-afb8-4053-9ce1-5bb3d1993868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df.drop('Outcome',axis=1)\n",
+    "y = df['Outcome']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f05c8a75-188a-45e1-b7af-c31e87c3405c",
    "metadata": {},
    "outputs": [
     {
@@ -439,64 +476,58 @@
        "      <th>BMI</th>\n",
        "      <th>DiabetesPedigreeFunction</th>\n",
        "      <th>Age</th>\n",
-       "      <th>Outcome</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>0.627</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>0.351</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>8</td>\n",
-       "      <td>183</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>125.0</td>\n",
        "      <td>23.3</td>\n",
        "      <td>0.672</td>\n",
        "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>1</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>116</td>\n",
+       "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25.6</td>\n",
-       "      <td>0.201</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>10</td>\n",
-       "      <td>115</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35.3</td>\n",
-       "      <td>0.134</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>8</td>\n",
-       "      <td>125</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.232</td>\n",
-       "      <td>54</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>4</td>\n",
-       "      <td>110</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>37.6</td>\n",
-       "      <td>0.191</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>168.0</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>2.288</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -507,111 +538,185 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>757</th>\n",
-       "      <td>0</td>\n",
-       "      <td>123</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>36.3</td>\n",
-       "      <td>0.258</td>\n",
-       "      <td>52</td>\n",
-       "      <td>1</td>\n",
+       "      <th>763</th>\n",
+       "      <td>10</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>32.9</td>\n",
+       "      <td>0.171</td>\n",
+       "      <td>63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>758</th>\n",
-       "      <td>1</td>\n",
-       "      <td>106</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>37.5</td>\n",
-       "      <td>0.197</td>\n",
-       "      <td>26</td>\n",
-       "      <td>0</td>\n",
+       "      <th>764</th>\n",
+       "      <td>2</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>36.8</td>\n",
+       "      <td>0.340</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>759</th>\n",
-       "      <td>6</td>\n",
-       "      <td>190</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35.5</td>\n",
-       "      <td>0.278</td>\n",
-       "      <td>66</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>762</th>\n",
-       "      <td>9</td>\n",
-       "      <td>89</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>22.5</td>\n",
-       "      <td>0.142</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0</td>\n",
+       "      <th>765</th>\n",
+       "      <td>5</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>0.245</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>766</th>\n",
        "      <td>1</td>\n",
-       "      <td>126</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>125.0</td>\n",
        "      <td>30.1</td>\n",
        "      <td>0.349</td>\n",
        "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>767</th>\n",
        "      <td>1</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>30.4</td>\n",
+       "      <td>0.315</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>227 rows × 8 columns</p>\n",
+       "<p>768 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     Pregnancies  Glucose  SkinThickness  Insulin   BMI  \\\n",
-       "2              8      183              0        0  23.3   \n",
-       "5              5      116              0        0  25.6   \n",
-       "7             10      115              0        0  35.3   \n",
-       "9              8      125              0        0   0.0   \n",
-       "10             4      110              0        0  37.6   \n",
+       "0              6    148.0           35.0    125.0  33.6   \n",
+       "1              1     85.0           29.0    125.0  26.6   \n",
+       "2              8    183.0           29.0    125.0  23.3   \n",
+       "3              1     89.0           23.0     94.0  28.1   \n",
+       "4              0    137.0           35.0    168.0  43.1   \n",
        "..           ...      ...            ...      ...   ...   \n",
-       "757            0      123              0        0  36.3   \n",
-       "758            1      106              0        0  37.5   \n",
-       "759            6      190              0        0  35.5   \n",
-       "762            9       89              0        0  22.5   \n",
-       "766            1      126              0        0  30.1   \n",
+       "763           10    101.0           48.0    180.0  32.9   \n",
+       "764            2    122.0           27.0    125.0  36.8   \n",
+       "765            5    121.0           23.0    112.0  26.2   \n",
+       "766            1    126.0           29.0    125.0  30.1   \n",
+       "767            1     93.0           31.0    125.0  30.4   \n",
        "\n",
-       "     DiabetesPedigreeFunction  Age  Outcome  \n",
-       "2                       0.672   32        1  \n",
-       "5                       0.201   30        0  \n",
-       "7                       0.134   29        0  \n",
-       "9                       0.232   54        1  \n",
-       "10                      0.191   30        0  \n",
-       "..                        ...  ...      ...  \n",
-       "757                     0.258   52        1  \n",
-       "758                     0.197   26        0  \n",
-       "759                     0.278   66        1  \n",
-       "762                     0.142   33        0  \n",
-       "766                     0.349   47        1  \n",
+       "     DiabetesPedigreeFunction  Age  \n",
+       "0                       0.627   50  \n",
+       "1                       0.351   31  \n",
+       "2                       0.672   32  \n",
+       "3                       0.167   21  \n",
+       "4                       2.288   33  \n",
+       "..                        ...  ...  \n",
+       "763                     0.171   63  \n",
+       "764                     0.340   27  \n",
+       "765                     0.245   30  \n",
+       "766                     0.349   47  \n",
+       "767                     0.315   23  \n",
        "\n",
-       "[227 rows x 8 columns]"
+       "[768 rows x 7 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['SkinThickness']==0]"
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "91ebd863-dd00-4d82-81f7-8ccac68ff2b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      1\n",
+       "1      0\n",
+       "2      1\n",
+       "3      0\n",
+       "4      1\n",
+       "      ..\n",
+       "763    0\n",
+       "764    0\n",
+       "765    0\n",
+       "766    1\n",
+       "767    0\n",
+       "Name: Outcome, Length: 768, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ded3fb0d-f519-43b1-a324-c570621d6135",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "x = scaler.fit_transform(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "7d6d0caa-3828-4db9-bbc8-3bd2d4aae2df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.63994726,  0.86604475,  0.67064253, ...,  0.16661938,\n",
+       "         0.46849198,  1.4259954 ],\n",
+       "       [-0.84488505, -1.20506583, -0.01230129, ..., -0.85219976,\n",
+       "        -0.36506078, -0.19067191],\n",
+       "       [ 1.23388019,  2.01666174, -0.01230129, ..., -1.33250021,\n",
+       "         0.60439732, -0.10558415],\n",
+       "       ...,\n",
+       "       [ 0.3429808 , -0.02157407, -0.69524511, ..., -0.910418  ,\n",
+       "        -0.68519336, -0.27575966],\n",
+       "       [-0.84488505,  0.14279979, -0.01230129, ..., -0.34279019,\n",
+       "        -0.37110101,  1.17073215],\n",
+       "       [-0.84488505, -0.94206766,  0.21534665, ..., -0.29912651,\n",
+       "        -0.47378505, -0.87137393]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13bf9983-80c1-4abf-9eb9-3a9c12683e80",
+   "id": "94404db7-90bd-4c63-a6ba-147af94f6f54",
    "metadata": {},
    "outputs": [],
    "source": []
