--- a/notebooks/3) PRE-PROCESSING.ipynb
+++ b/notebooks/3) PRE-PROCESSING.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "0fbd22be-030f-4288-8ce9-dd921c9779ce",
    "metadata": {},
    "outputs": [],
@@ -408,32 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "13bf9983-80c1-4abf-9eb9-3a9c12683e80",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'MinMaxScaler' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m numerical_cols \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mcolumns[df\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOutcome\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m scaler \u001b[38;5;241m=\u001b[39m MinMaxScaler()\n\u001b[0;32m      4\u001b[0m df[numerical_cols] \u001b[38;5;241m=\u001b[39m scaler\u001b[38;5;241m.\u001b[39mfit_transform(df[numerical_cols])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'MinMaxScaler' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "numerical_cols = df.columns[df.columns != 'Outcome']\n",
-    "\n",
-    "scaler = MinMaxScaler()\n",
-    "df[numerical_cols] = scaler.fit_transform(df[numerical_cols])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "200462ed-afb8-4053-9ce1-5bb3d1993868",
    "metadata": {},
    "outputs": [],
@@ -444,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "f05c8a75-188a-45e1-b7af-c31e87c3405c",
    "metadata": {},
    "outputs": [
@@ -624,7 +599,7 @@
        "[768 rows x 7 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "91ebd863-dd00-4d82-81f7-8ccac68ff2b7",
    "metadata": {},
    "outputs": [
@@ -656,7 +631,7 @@
        "Name: Outcome, Length: 768, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,56 +642,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "ded3fb0d-f519-43b1-a324-c570621d6135",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "\n",
-    "\n",
     "scaler = StandardScaler()\n",
     "x = scaler.fit_transform(x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "7d6d0caa-3828-4db9-bbc8-3bd2d4aae2df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_trainset, X_testset = train_test_split(x,test_size=0.2,random_state=0)\n",
+    "Y_trainset,Y_testset = train_test_split(y,test_size=0.2,random_state=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "94404db7-90bd-4c63-a6ba-147af94f6f54",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.63994726,  0.86604475,  0.67064253, ...,  0.16661938,\n",
-       "         0.46849198,  1.4259954 ],\n",
-       "       [-0.84488505, -1.20506583, -0.01230129, ..., -0.85219976,\n",
-       "        -0.36506078, -0.19067191],\n",
-       "       [ 1.23388019,  2.01666174, -0.01230129, ..., -1.33250021,\n",
-       "         0.60439732, -0.10558415],\n",
-       "       ...,\n",
-       "       [ 0.3429808 , -0.02157407, -0.69524511, ..., -0.910418  ,\n",
-       "        -0.68519336, -0.27575966],\n",
-       "       [-0.84488505,  0.14279979, -0.01230129, ..., -0.34279019,\n",
-       "        -0.37110101,  1.17073215],\n",
-       "       [-0.84488505, -0.94206766,  0.21534665, ..., -0.29912651,\n",
-       "        -0.47378505, -0.87137393]])"
+       "Outcome\n",
+       "0    107\n",
+       "1     47\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x\n"
+    "Y_testset.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "47f81455-a8c6-4f6c-bcec-feb7c16b7281",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Outcome\n",
+       "0    393\n",
+       "1    221\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_trainset.value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94404db7-90bd-4c63-a6ba-147af94f6f54",
+   "id": "6fc23c40-0d74-4037-a553-912858f5a3ae",
    "metadata": {},
    "outputs": [],
    "source": []
