--- a/notebooks/3) PRE-PROCESSING.ipynb
+++ b/notebooks/3) PRE-PROCESSING.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "200462ed-afb8-4053-9ce1-5bb3d1993868",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "f05c8a75-188a-45e1-b7af-c31e87c3405c",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
        "[768 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "91ebd863-dd00-4d82-81f7-8ccac68ff2b7",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "Name: Outcome, Length: 768, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "ded3fb0d-f519-43b1-a324-c570621d6135",
    "metadata": {},
    "outputs": [],
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "7d6d0caa-3828-4db9-bbc8-3bd2d4aae2df",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "94404db7-90bd-4c63-a6ba-147af94f6f54",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "47f81455-a8c6-4f6c-bcec-feb7c16b7281",
    "metadata": {},
    "outputs": [
@@ -703,13 +703,29 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Y_trainset.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "71a31515-2533-4c5a-9aaa-0172255a71a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.save(\"../data/X_train.npy\", X_trainset)\n",
+    "np.save(\"../data/Y_train.npy\", Y_trainset)\n",
+    "\n",
+    "np.save(\"../data/X_test.npy\", X_testset)\n",
+    "np.save(\"../data/Y_test.npy\", Y_testset)"
    ]
   },
   {
@@ -722,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "360c5325-b1ad-4b33-a6c7-27db1c75ae29",
    "metadata": {},
    "outputs": [],
@@ -737,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "9473a578-a696-42e1-b77d-9794656f2cfb",
    "metadata": {},
    "outputs": [],
@@ -757,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "id": "9da7fcf0-f90e-4966-bbc0-29cc862215c6",
    "metadata": {},
    "outputs": [],
@@ -768,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "18e0a8fc-e0a1-47a1-a957-c05341aa1dde",
    "metadata": {},
    "outputs": [],
@@ -791,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "21fe73e1-5ec2-49de-a04c-d6cbd2984ae9",
    "metadata": {},
    "outputs": [
