--- a/notebooks/4)Classification.ipynb
+++ b/notebooks/4)Classification.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "10860362-4fd2-4716-a2fd-e868a8660162",
    "metadata": {},
    "outputs": [],
@@ -25,6 +25,23 @@
     "\n",
     "X_test = np.load(\"../data/X_test.npy\")\n",
     "Y_test = np.load(\"../data/Y_test.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6b9e8cd7-2de5-48de-bfd8-111f2762e2bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay"
    ]
   },
   {
@@ -113,15 +130,6 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
-    "\n",
     "# Liste des modèles à tester\n",
     "models = {\n",
     "    \"Logistic Regression\": LogisticRegression(max_iter=1000),\n",
@@ -180,11 +188,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5b0e5ee0-165f-4d00-8d16-90c67844c49b",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../output/mlp_model.pkl']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib \n",
+    "model = MLPClassifier(max_iter=1000, random_state=42)\n",
+    "model.fit(X_train, Y_train)\n",
+    "\n",
+    "# Sauvegarder le modèle\n",
+    "joblib.dump(model, \"../output/mlp_model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95affc8d-9d89-4207-a81a-b6599eb58c61",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "\n",
+    "df_pred = pd.DataFrame({\n",
+    "    \"True_Label\": Y_test,\n",
+    "    \"Predicted_Label\": y_pred\n",
+    "})\n",
+    "df_pred.to_csv(\"../output/predictions.csv\", index=False)\n",
+    "\n",
+    "\n",
+    "report = classification_report(Y_test, y_pred, output_dict=True)\n",
+    "df_report = pd.DataFrame(report).transpose()\n",
+    "df_report.to_csv(\"../output/classification_report.csv\")\n",
+    "\n",
+    "\n",
+    "conf_matrix = confusion_matrix(Y_test, y_pred)\n",
+    "df_conf_matrix = pd.DataFrame(conf_matrix)\n",
+    "df_conf_matrix.to_csv(\"../output/confusion_matrix.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
